[package]
name = "titanium-rose"
version = "0.1.0"
edition = "2021"

[dependencies]
crypto-bigint = { version = "0.5.5", features = ["rand_core", "serde"] }
rand_core = { version = "0.6.4", features = ["std"] }
eframe = "0.26.2"
base64 = "0.22.0"
serde = { version = "1.0.197", features = ["derive"] }
bincode = "1.3.3"

[profile.test]
opt-level = 3

[profile.dev]
opt-level = 3
